--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "files": [
     "index.cjs.{js,js.map}",
     "index.esm.{js,js.map}",
+    "CHANGELOG.md",
     "LICENSE.md",
     "README.md"
   ],
@@ -19,11 +20,13 @@
   "scripts": {
     "build": "rollup --config rollup.config.js",
     "lint": "eslint '{index,lib/**/*,test/**/*}.js'",
+    "postpublish": "GITHUB_TOKEN=$GITHUB_RELEASE_TOKEN github-release-from-changelog",
     "prepublishOnly": "npm run build",
     "release": "np",
     "test": "npm run lint && npm run test:automated",
     "test:automated": "BABEL_ENV=test karma start",
-    "test:automated:watch": "npm run test:automated -- --auto-watch --no-single-run"
+    "test:automated:watch": "npm run test:automated -- --auto-watch --no-single-run",
+    "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -33,6 +36,7 @@
     "@babel/runtime": "^7.2.0",
     "babel-loader": "^8.0.4",
     "babel-preset-niksy": "^4.1.0",
+    "changelog-verify": "^1.1.2",
     "core-js": "^2.6.5",
     "eslint": "^5.4.0",
     "eslint-config-niksy": "^6.1.0",
@@ -43,6 +47,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-unicorn": "^5.0.0",
     "esm": "^3.0.51",
+    "github-release-from-changelog": "^1.3.2",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^4.0.1",
     "karma-browserstack-launcher": "^1.0.0",
@@ -59,6 +64,7 @@
     "rollup": "^1.0.0",
     "rollup-plugin-babel": "^4.2.0",
     "sinon": "^2.4.1",
+    "version-changelog": "^3.1.1",
     "webpack": "^4.12.0"
   },
   "engines": {
@@ -74,10 +80,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/niksy/advertol.git"
+    "url": "git+https://github.com/niksy/advertol-core.git"
   },
   "bugs": {
-    "url": "https://github.com/niksy/advertol/issues"
+    "url": "https://github.com/niksy/advertol-core/issues"
   },
-  "homepage": "https://github.com/niksy/advertol#readme"
+  "homepage": "https://github.com/niksy/advertol-core#readme"
 }
